# csp-gateway

./: .copier-answers.yaml  .gitignore  LICENSE  Makefile  README.md  hatch_build.py  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  wiki.yaml  wiki.yml
csp_gateway/: __init__.py
csp_gateway/benchmarks/: asv.conf.jsonc
csp_gateway/benchmarks/benchmarks/server/gateway/csp/: state.py
csp_gateway/benchmarks/benchmarks/utils/: id_generator.py
csp_gateway/client/: __init__.py  client.py  csp_stream.py
csp_gateway/server/: __init__.py  cli.py  settings.py
csp_gateway/server/config/: __init__.py  base.yaml  modules.yaml
csp_gateway/server/config/gateway/: demo.yaml  omnibus.yaml
csp_gateway/server/config/hydra/job_logging/: custom.yaml
csp_gateway/server/demo/: __init__.py  __main__.py  omnibus.py  simple.py
csp_gateway/server/demo/config/: demo.yaml  logfire.yaml  omnibus.yaml
csp_gateway/server/gateway/: __init__.py  gateway.py
csp_gateway/server/gateway/csp/: __init__.py  channels.py  factory.py  module.py  stage.py  state.py
csp_gateway/server/gateway/csp/futures/: __init__.py  adapter.py
csp_gateway/server/middleware/: __init__.py  api_key.py  api_key_external.py  auth_filter.py  base.py  oauth.py  simple.py
csp_gateway/server/middleware/hacks/api_key_middleware_websocket_fix/: __init__.py  api_key.py  http.py  utils.py
csp_gateway/server/modules/: __init__.py  initializer.py  mirror.py  sql.py  summary.py
csp_gateway/server/modules/controls/: __init__.py  controls.py
csp_gateway/server/modules/filedrop/: __init__.py  adapter.py  filedrop.py
csp_gateway/server/modules/io/: __init__.py  graph_output.py  json.py  json_pull_adapter.py
csp_gateway/server/modules/kafka/: __init__.py  kafka.py  utils.py
csp_gateway/server/modules/logging/: __init__.py  datadog.py  logfire.py  logging.py  opsgenie.py  printing.py  stdlib.py  symphony.py  util.py
csp_gateway/server/modules/web/: __init__.py  channels_graph.py  mount.py  mount_fields.py  outputs.py  perspective.py  websocket.py
csp_gateway/server/shared/: __init__.py  adapters.py  channel_selection.py  engine_replay.py  json_converter.py
csp_gateway/server/web/: __init__.py  app.py  logging.py  static.py  utils.py
csp_gateway/server/web/routes/: __init__.py  controls.py  last.py  lookup.py  next.py  send.py  shared.py  stage.py  state.py
csp_gateway/server/web/templates/: channels_graph.html.j2  files.html.j2  index.html.j2  login.html.j2  logout.html.j2
csp_gateway/server/web/templates/css/: common.css
csp_gateway/server/web/templates/js/: common.js
csp_gateway/testing/: __init__.py  harness.py  mock_validators.py  shared_helpful_classes.py  web.py
csp_gateway/tests/: conftest.py  test_harness.py
csp_gateway/tests/client/: test_client.py  test_csp_stream.py
csp_gateway/tests/config/: test_load.py
csp_gateway/tests/config/user_config/: sample_config.yaml
csp_gateway/tests/server/config/: test_load_config.py
csp_gateway/tests/server/gateway/: test_gateway.py  test_gateway_dicts_and_feedbacks.py  test_gateway_start_stop.py
csp_gateway/tests/server/gateway/csp/: test_channels.py  test_stage.py  test_state.py
csp_gateway/tests/server/modules/: test_initializer.py  test_mirror.py  test_sql.py
csp_gateway/tests/server/modules/filedrop/: test_filedrop.py
csp_gateway/tests/server/modules/io/: test_graph_output.py  test_json.py  test_json_converter.py  test_json_pull_adapter.py
csp_gateway/tests/server/modules/kafka/: test_kafka.py
csp_gateway/tests/server/modules/logging/: test_datadog.py  test_logfire.py  test_logging.py  test_opsgenie.py  test_printing.py  test_stdlib.py  test_util.py
csp_gateway/tests/server/modules/web/: test_perspective.py
csp_gateway/tests/server/shared/: test_adapters.py  test_channel_selection.py
csp_gateway/tests/server/web/: test_api_key_external.py  test_auth_filter.py  test_logging.py  test_oauth.py  test_shared.py  test_simple_auth.py  test_stage_routes.py  test_ui_customization.py  test_webserver.py
csp_gateway/tests/utils/: test_csp.py  test_picklable_queue.py
csp_gateway/tests/utils/struct/: test_base.py  test_lookup.py
csp_gateway/tests/utils/web/: test_query.py
csp_gateway/utils/: __init__.py  csp.py  enums.py  exceptions.py  fastapi.py  id_generator.py  picklable_queue.py  threads.py
csp_gateway/utils/struct/: __init__.py  base.py  psp.py
csp_gateway/utils/web/: __init__.py  controls.py  filter.py  query.py
docs/wiki/: API.md  CSP-Notes.md  Client.md  Configuration.md  Develop.md  Installation.md  Modules.md  Overview.md  UI.md  _Footer.md  _Sidebar.md
docs/wiki/contribute/: Build-from-Source.md  Contribute.md  Local-Development-Setup.md
examples/: Client.ipynb  filedrop_example.py  kafka_example.py  multiprocessing_example.py  panel_example.py  websocket_client.py
js/: README.md  build.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
js/src/: common.js  index.jsx  main.jsx
js/src/components/: footer.jsx  header.jsx  index.js  loader.jsx  logo.jsx  settings.jsx
js/src/components/perspective/: gateway.js  index.js  layout.js  tables.js  theme.js  workspace.jsx
js/src/css/: base.css  header_footer.css  index.css  perspective.css
js/src/html/: index.html
js/src/js/: common.js  index.jsx  main.jsx
js/src/js/components/: header.jsx  index.js  loader.jsx  logo.jsx  settings.jsx
js/src/js/components/perspective/: gateway.js  layout.js  tables.js  workspace.jsx
js/src/style/: base.css  header_footer.css  index.css  perspective.css  settings.css
js/tools/: css.mjs
