[build-system]
requires = ["hatchling", "hatch-js", "hatch-multi>=1"]
build-backend="hatchling.build"

[project]
name = "csp-gateway"
authors = [{name = "Point72, L.P.", email = "OpenSource@point72.com"}]
description = "csp-gateway is a framework for building high-performance streaming applications"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "2.2.0"
requires-python = ">=3.9"
keywords = ["csp", "csp-gateway"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dynamic = ["dependencies"]

[project.optional-dependencies]
develop = [
    "asv",
    "build",
    "bump-my-version",
    "check-manifest",
    "codespell>=2.4,<2.5",
    "hatch-js",
    "hatch-multi>=1",
    "hatchling",
    "mdformat>=0.7.22,<0.8",
    "mdformat-tables>=1",
    "pytest",
    "pytest-aiohttp",
    "pytest-asyncio",
    "pytest-cov",
    "python-magic",
    "ruff>=0.9,<0.13",
    "twine",
    "wheel",
    # modules
    "arrow-odbc",
    "datadog",
    "opsgenie_sdk",
    "sqlalchemy",
    "watchdog",
    # client
    "aiohttp",
    "aiostream",
    "httpx",
    "jsonref",
    "nest-asyncio",
    "packaging",
    "polars",
    "pandas",
]
server = [
    "atomic-counter>=0.1.3",
    "ccflow>=0.5.9,<1",
    "colorlog",
    "csp>=0.8.0,<1",
    "deprecation",
    "duckdb>=0.10",
    "fastapi>=0.110",
    "fsspec",
    "hydra-core",
    "janus",
    "omegaconf",
    "orjson",
    "perspective-python>=3.7,<4",
    "psutil",
    "pyarrow",
    "pydantic>=2",
    "uvicorn>=0.28.1,<0.31",
    "uvloop",
    "websockets",
]
client = [
    # NOTE: Optional
    # "aiohttp",
    # "aiostream",
    "httpx",
    "jsonref",
    "nest-asyncio",
    "packaging",
    "pydantic>=2",
    # "polars",
    # "pandas",
]

[project.scripts]
cspgateway-start = "csp_gateway.server.cli:main"
cspgateway_start = "csp_gateway.server.cli:main"
csp-gateway-start = "csp_gateway.server.cli:main"
csp_gateway_start = "csp_gateway.server.cli:main"

[project.urls]
Repository = "https://github.com/Point72/csp-gateway"
Homepage = "https://github.com/Point72/csp-gateway/wiki"

[tool.bumpversion]
current_version = "2.2.0"
commit = true
tag = false
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "csp_gateway/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "examples/Client.ipynb"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yaml",
    "js/pnpm-lock.yaml",
    "Makefile",
    ".vscode/*",
    "csp_gateway/server/build/*",
    "docs/**/*",
    "examples/**/*",
    "js/dist/**/*",
    "js/lib/**/*",
    "js/node_modules/**/*",
]

[tool.coverage.run]
branch = true
omit = [
    "csp_gateway/server/middleware/hacks/*",
    "csp_gateway/tests/integration/",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
    "csp_gateway/server/build/*"
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["csp_gateway", "js"]
exclude = [
    "/docs",
    "/examples",
    "/js/dist",
    "/js/lib",
    "/js/node_modules",
]

[tool.hatch.build.targets.wheel]
packages = ["csp_gateway"]
exclude = [
    "/docs",
    "/examples",
    "/js"
]

[tool.hatch.build.hooks.hatch-js]
path = "js"
build_cmd = "build"
tool = "pnpm"
targets = [
    "csp_gateway/server/build/index.css",
    "csp_gateway/server/build/index.html",
    "csp_gateway/server/build/main.js",
]

[tool.hatch.metadata.hooks.hatch-multi]
primary = ["server", "client"]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
testpaths = "csp_gateway/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["csp_gateway"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"conftest.py" = ["F401", "F403"]
"csp_gateway/tests/*" = ["D"]
